--- a/codeBite/public/stylesheets/product.css
+++ b/codeBite/public/stylesheets/product.css
@@ -1,231 +1,230 @@
-
-    @font-face {
-    font-family: am;
-    src: url("/public/samarkan/Gilroy-Medium.ttf");
+@font-face {
+  font-family: am;
+  src: url('/public/samarkan/Gilroy-Medium.ttf');
 }
-*{
-    margin: 0%; 
-    padding: 0%;
-    box-sizing: border-box;
+* {
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
 }
-html,body{
-    font-family: am;
-    width: 100%;
-    height: 100%;
+html,
+body {
+  font-family: am;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(232, 235, 193);
 }
-#main{
-    display: flex;
-    width: 100vw;
-    height: 100vh;
-    background-color: aqua;
+#main {
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  background-color: aqua;
 }
-#left{
-    display: flex;
-    width: 50vw;
-    height: 100vh;
-    background-color: blueviolet;
-}
-
-#right{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50vw;
-    height: 100vh;
-    background-color: rgb(255, 255, 255);
+#left {
+  display: flex;
+  width: 50vw;
+  height: 100vh;
+  background-color: blueviolet;
 }
 
-#left #sidebox{
-    /* border: 1px solid black; */
-    padding: 3vw 0vw;
-    display: flex;
-    flex-direction: column;
-    /* justify-content: space-between; */
-    gap: 1.5vw;
-    align-items: end;
-    width: 20%;
-    height: 100vh;
-    background-color: #fff;
-}
-#left #mainbox{
-    padding: 3vw 0vw;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    width: 80%;
-    height: 100vh;
-    background-color: rgb(255, 255, 255);
-}
-#sidebox .sbox{
-    width: 80%;
-    height: 15vh;
-    background-color:brown;
+#right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50vw;
+  height: 100vh;
+  background-color: rgb(255, 255, 255);
 }
 
-
-#mainbox #boxdesign{
-    width: 80%;
-    height: 80%;
-    /* border: 2px solid black; */
+#left #sidebox {
+  /* border: 1px solid black; */
+  padding: 3vw 0vw;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+  gap: 1.5vw;
+  align-items: end;
+  width: 20%;
+  height: 100vh;
+  background-color: #fff;
 }
-#boxdesign img{
-    cursor: pointer;
-    width: 100%;
-    height: 100%;
+#left #mainbox {
+  padding: 3vw 0vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 80%;
+  height: 100vh;
+  background-color: rgb(255, 255, 255);
 }
-
-#mainbox #cart-design{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 90%;
-    height: 10%;
-    /* background-color: chocolate; */
-}
-#cart-design #left-cart{
-    /* border: 2px solid black; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 45%;
-    height: 70%;
-    
-    background-color: rgb(216, 210, 210);
-}
-#cart-design #right-cart{
-    /* border: 2px solid black; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 45%;
-    height: 70%;
-    background-color: rgb(185, 185, 196);
-}
-#cart-design h1{
-    cursor: pointer;
-    font-size: 1.5rem;
-   color: black;
-   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+#sidebox .sbox {
+  width: 80%;
+  height: 15vh;
+  background-color: brown;
 }
 
-#right #main-details{
-    padding-left: 1vw;
-    width: 90%;
-    height: 95%;
-    /* border: 1px solid rgba(188, 176, 176, 0.176); */
+#mainbox #boxdesign {
+  width: 80%;
+  height: 80%;
+  /* border: 2px solid black; */
 }
-#main-details>h2{
-    font-family: am;
-    font-weight: 100;
+#boxdesign img {
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
 }
-#main-details #price-box{
-    margin-top: 2vw;
-    width: 90%;
-    height: 30vh;
-    /* border: .5px solid rgba(196, 188, 188, 0.283); */
+
+#mainbox #cart-design {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 90%;
+  height: 10%;
+  /* background-color: chocolate; */
 }
-#price-box>h2{
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 1.3vw;
-    color: rgba(0, 0, 0, 0.6);
+#cart-design #left-cart {
+  /* border: 2px solid black; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 45%;
+  height: 70%;
+
+  background-color: rgb(216, 210, 210);
 }
-#price-box>h1{
-    margin-top: 1vw;
-    font-family: am;
+#cart-design #right-cart {
+  /* border: 2px solid black; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 45%;
+  height: 70%;
+  background-color: rgb(185, 185, 196);
 }
-#price-box #rating{
-    margin-top: 1vw;
-    gap: 2vw;
-    display: flex;
-    align-items: center;
-    width: 100%;
-    height: 5vh;
-    /* background-color: chartreuse; */
+#cart-design h1 {
+  cursor: pointer;
+  font-size: 1.5rem;
+  color: black;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-#rating #rating-left{
-    border-radius: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 5vw;
-    height: 100%;
-    background-color: rgb(18, 165, 77);
+
+#right #main-details {
+  padding-left: 1vw;
+  width: 90%;
+  height: 95%;
+  /* border: 1px solid rgba(188, 176, 176, 0.176); */
 }
-#rating-left i{
-    color: white;
+#main-details > h2 {
+  font-family: am;
+  font-weight: 100;
 }
-#rating>h5{
-    font-family: am;
-    color: rgba(0, 0, 0, 0.457);
+#main-details #price-box {
+  margin-top: 2vw;
+  width: 90%;
+  height: 30vh;
+  /* border: .5px solid rgba(196, 188, 188, 0.283); */
 }
-#price-box>h3{
-    margin-top: 1vw;
-    font-family: am;
+#price-box > h2 {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 1.3vw;
+  color: rgba(0, 0, 0, 0.6);
 }
-#main-details #otharized{
-    font-family: am;
-    margin-top: 2vw;
-    padding: 0vw 5vw;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    height: 10vh;
-    /* background-color: chocolate; */
+#price-box > h1 {
+  margin-top: 1vw;
+  font-family: am;
 }
-#otharized>h2{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#price-box #rating {
+  margin-top: 1vw;
+  gap: 2vw;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  height: 5vh;
+  /* background-color: chartreuse; */
 }
-#otharized i{
-    color: blue;
-    animation: otharized 3s infinite linear;
+#rating #rating-left {
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 5vw;
+  height: 100%;
+  background-color: rgb(18, 165, 77);
+}
+#rating-left i {
+  color: white;
+}
+#rating > h5 {
+  font-family: am;
+  color: rgba(0, 0, 0, 0.457);
+}
+#price-box > h3 {
+  margin-top: 1vw;
+  font-family: am;
+}
+#main-details #otharized {
+  font-family: am;
+  margin-top: 2vw;
+  padding: 0vw 5vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 10vh;
+  /* background-color: chocolate; */
+}
+#otharized > h2 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#otharized i {
+  color: blue;
+  animation: otharized 3s infinite linear;
 }
 @keyframes otharized {
-    0%{
-        transform: rotate(0deg);
-    }
-    100%{
-        transform: rotate(360deg);
-    }
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
-#main-details #size{
-    margin-top: 2vw;
-    padding: 0vw 1vw;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 80%;
-    height: 15vh;
-    background-color: rgb(255, 255, 255);
+#main-details #size {
+  margin-top: 2vw;
+  padding: 0vw 1vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 80%;
+  height: 15vh;
+  background-color: rgb(255, 255, 255);
 }
-#size .sizebox{
-    font-family: am;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 10vw;
-    height: 13vh;
-    /* background-color: rgb(255, 34, 0); */
-    border: 1px solid black;
+#size .sizebox {
+  font-family: am;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 10vw;
+  height: 13vh;
+  /* background-color: rgb(255, 34, 0); */
+  border: 1px solid black;
 }
-#main-details #product-details{
-
-    width: 100%;
-    height: 23vh;
+#main-details #product-details {
+  width: 100%;
+  height: 23vh;
 }
-#product-details>h1{
-    font-family: am;
+#product-details > h1 {
+  font-family: am;
 }
-#product-details>h4{
-    color: rgba(0, 0, 0, 0.614);
-    margin-top: 1vw;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+#product-details > h4 {
+  color: rgba(0, 0, 0, 0.614);
+  margin-top: 1vw;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
-#sidebox img{
-    height: 100%;
-    width: 100%;
-    position: relative;
+#sidebox img {
+  height: 100%;
+  width: 100%;
+  position: relative;
 }
