--- a/codeBite/views/product.ejs
+++ b/codeBite/views/product.ejs
@@ -7,12 +7,12 @@
     <title>Indian_rigs</title>
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <!-- <link rel="stylesheet" href="product.ejs"> -->
-  <!-- <link rel="stylesheet" href="./stylesheets/addnewpro.css"> -->
   <link rel="stylesheet" href="/stylesheets/product.css">
 <style>
-    .stripe-button-el {
-        visibility: hidden ;
-    }
+  
+  .stripe-button{
+    display: block !important;
+  }
     /* ther products div */
     .product-container {
   display: flex;
@@ -338,7 +338,7 @@ h2 {
 
 <!-- the summery div here  -->
 
-<div id="checkout-summary" class="summary-animation" style="visibility: hidden;">
+<div id="checkout-summary" class="summary-animation" style=" display: none;">
     <h2>Checkout Summary</h2>
     <div class="prod">
       <h3><%= product.name%></h3>
@@ -351,7 +351,7 @@ h2 {
         <%}%>
         <% if(user[0]){%> -->
     
-    <form action="payment" method="POST" style="border:2px solid red">
+    <form action="payment" method="POST" class="Pform"  style=" display: none;" >
     
         <script
         src = "//checkout.stripe.com/v2/checkout.js"
@@ -388,19 +388,19 @@ h2 {
 
 
 
-<div class="perent-container" style="display: flex; justify-content: center; font-size: 32px;">
+<div class="perent-container" style="display: flex; justify-content: center; font-size: 32px; margin-top: 7vh;">
 
 <h2 class="animated-heading">See Our Other Collection</h2>
 </div>
 <div class="product-container">
    
     <% for(var i = 0; i < displayItems.length; i++) { %>
-      <div class="product">
+     <a href="/price/<%= displayItems[i]._id%>" style="text-decoration:none;color:rgb(31, 26, 26);"> <div class="product">
         <img src="/upload/<%= displayItems[i].image1 %>" alt="Product 1">
         <h3><%= displayItems[i].title %></h3>
         <p>$ <%= displayItems[i].price %></p>
-        <button class="logoutbtn"><h3>Add to Cart</h3></button>
-      </div>
+        <button class="logoutbtn"><h3>  View Product</h3></button>
+      </div></a>
     <% } %>
   
 
@@ -413,7 +413,7 @@ h2 {
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.4/gsap.min.js" integrity="sha512-f8mwTB+Bs8a5c46DEm7HQLcJuHMBaH/UFlcgyetMqqkvTcYg4g5VXsYR71b3qC82lZytjNYvBj2pf0VekA9/FQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script>
 
-// document.getElementsByClassName('stripe-button').style.visibility = "hidden";
+
 
         var leftcart = document.querySelector("#left-cart");
         leftcart.addEventListener("mouseover", function(){
@@ -425,22 +425,23 @@ h2 {
             })
             gsap.to("#left-cart>h1>a",{
                 color:"white",
+
                 duration:1,
                 ease:Expo.InOut
             })
         })
-        // leftcart.addEventListener("mouseleave", function(){
-        //     agsap.to("#left-cart",{
-        //         backgroundColor:"grey",
-        //         duration:1,
-        //         ease: Expo.InOut
-        //     })
-        //     gsap.to("#left-cart>h1",{
-        //         color:"white",
-        //         duration:1,
-        //         ease:Expo.InOut
-        //     })
-        // })
+        leftcart.addEventListener("mouseleave", function(){
+            agsap.to("#left-cart",{
+                backgroundColor:"grey",
+                duration:1,
+                ease: Expo.InOut
+            })
+            gsap.to("#left-cart>h1>a",{
+                color:"white",
+                duration:1,
+                ease:Expo.InOut
+            })
+        })
 
         var rightcart = document.querySelector("#right-cart");
         rightcart.addEventListener("mousemove", function(){
@@ -522,10 +523,22 @@ h2 {
         zoom();
 
         // pulkit`s code 
+        
         var buy = document.getElementById('buyNow');
         var sum = document.getElementById('checkout-summary');
         buy.addEventListener('click', ()=>{
-            sum.style.visibility = "visible";
+
+     
+          // sum.style.visibility = "visible";
+            // sum.style.display = "block";
+            document.querySelector('#checkout-summary').style.display="block"
+            document.querySelector('.Pform').style.display="block"
+            var checkoutSummary = document.querySelector('#checkout-summary');
+            if (checkoutSummary) {
+    var scrollPosition = checkoutSummary.offsetTop + (checkoutSummary.offsetHeight / 2) - (window.innerHeight / 2);
+    window.scrollTo({ top: scrollPosition, behavior: 'smooth' });
+  }
+
         })
 
     </script>
