plese take pull before editing

--- a/codeBite/public/stylesheets/product.css
+++ b/codeBite/public/stylesheets/product.css
@@ -18,7 +18,7 @@ body {
   display: flex;
   width: 100vw;
   height: 100vh;
-  background-color: aqua;
+  background-color: rgb(232, 235, 193);
 }
 #left {
   display: flex;
@@ -127,8 +127,8 @@ body {
 }
 #price-box > h2 {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  font-size: 1.3vw;
-  color: rgba(0, 0, 0, 0.6);
+  font-size: 2vw;
+  color: green;
 }
 #price-box > h1 {
   margin-top: 1vw;
