--- a/codeBite/views/indexForLoggedInUser.ejs
+++ b/codeBite/views/indexForLoggedInUser.ejs
@@ -240,7 +240,13 @@
     <video autoplay loop muted src="./video/video.mp4"></video>
     </div> 
 
+<script>function getRandomNumber(min, max) {
+  return Math.floor(Math.random() * (max - min + 1)) + min;
+}
 
+// Example usage
+var randomNumber = getRandomNumber(1, 10);
+console.log(randomNumber);</script>
   <script src="https://cdn.jsdelivr.net/npm/kursor@0.1.6/dist/kursor.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="./javascripts/script.js"></script>
