--- a/codeBite/views/myAccount.ejs
+++ b/codeBite/views/myAccount.ejs
@@ -114,8 +114,8 @@ html,body{
     font-weight: 500;
 }
  .b{
-    margin-top: 6%;
-    margin-left: 15%;
+    margin-top: 8%;
+    margin-left: 38%;
     font-family: "Gilroy";
     font-weight: 500;
 }
@@ -492,7 +492,8 @@ html,body{
                 <div id="account">
                     <h3>ACCOUNT SETTINGS</h3>
                     <h4 class="a"> Profile Information </h4>
-                    <h4 class="b"> Manage Addresses</h4>
+                    <h3 style="margin-top: 10vh;">BE A SELLER</h3>
+                   <a href="/addnewpro"> <h4 class="b" > List Your Products</h4></a>
                     <h4 class="c"> PAN Card Information</h4>
                 </div>
                 <div id="payment">
