--- a/codeBite/public/stylesheets/style.css
+++ b/codeBite/public/stylesheets/style.css
@@ -68,6 +68,14 @@ body::-webkit-scrollbar {
   color: white;
 }
 
+.myAccount{
+  display: flex;
+  flex-direction: column  ;
+}
+.myAccount>a{
+  text-decoration: none;
+  color: #fff;
+}
 .overlay1 {
   display: flex;
   flex-direction: column;
