--- a/codeBite/views/myAccount.ejs
+++ b/codeBite/views/myAccount.ejs
@@ -13,7 +13,7 @@
         <div id="left">
             <div id="upbox">
                     <div id="imgbox"> <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" alt=""> </div>
-                 <h3>Hello , <%= user.Name %></h3>
+                 <h3><%= user.Name %></h3>
                
             </div>
             <div id="midbox">
@@ -27,8 +27,8 @@
                     <h4 class="a"> Profile Information </h4>
 
                     <div class="addnewproduct">
-                      <h3 style="margin-top: 10vh;">BE A SELLER</h3>
-                      <a href="/addnewpro"> <h4 class="b" > Add Your Products</h4></a>
+                      <h3>BE A SELLER</h3>
+                      <a href="/addnewpro"> <h4> Add Your Products</h4></a>
                     </div>
 
                  
