update i myAccount page

--- a/codeBite/views/myAccount.ejs
+++ b/codeBite/views/myAccount.ejs
@@ -36,8 +36,8 @@
                 </div>
                 <div id="payment">
                     <div id="rap"> 
-                    <i class="ri-bank-card-fill"></i>
-                    <h3>PAYMENTS</h3>
+                      <h3>PAYMENTS</h3>
+                       <i class="ri-bank-card-fill"></i>
                     </div>
                     <h4 class="m">Gift Cards₹0</h4>
                     <h4 class="n">Saved UPI</h4>
@@ -95,7 +95,7 @@
 
 
 
-            <form action="/editProfile" id="myForm" method="POST" >
+             <form action="/editProfile" id="myForm" method="POST" >
             <div class="form-container">
 
 
@@ -134,9 +134,10 @@
                 <img class="profileimg" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" alt="https://cdn-icons-png.flaticon.com/512/3135/3135715.png">
             
               </div>
-            </form>
+            </form> 
             
-     </div> 
+        </div> 
+     <div>   
 <script>
 
 function makeFormReadOnly() {
