--- a/codeBite/public/stylesheets/myAccount.css
+++ b/codeBite/public/stylesheets/myAccount.css
@@ -16,21 +16,39 @@ font-family: Gilroy;
 
 #main{
 position: relative;
+display: flex;
+justify-content: center;
+align-items: center;
+gap: 2vw;
 width: 100%;
 height: 100%;
-background-color: #dadada;
+/* background-color: #e21717; */
 }
-
-#upbox{
-position: relative;
+/* -------------left--------------------- */
+#left{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  border: 1px solid black;
+  width: 23vw;
+  height: 90vh;
+  /* background-color: #3498db; */
+}
+#right{
+  width: 60vw;
+  height: 90vh;
+  background-color: #ffffff;
+  }
+#left #upbox{
+/* position: relative; */
 display: flex;
 align-items: center;
-position: absolute;
-top: 3vh;
-left: 8vw;
-width: 23vw;
-height: 7vh;
-background-color: #fff;
+/* position: absolute; */
+/* top: 3vh; */
+/* left: 8vw; */
+width: 100%;
+height: 10vh;
+/* background-color: #ba0909; */
 }
 #imgbox{
 width: 6vh;
@@ -52,38 +70,41 @@ border-radius: 50%;
 font-size: 30px;
 margin-left: 15px;
 }
-#midbox{
-position: relative;
-position: absolute;
-top: 17vh;
-left: 8vw;
-width: 23vw;
-height: 75vh;
-background-color: #fff;
+
+/*  -------------------------------midbox----------------- */
+#left #midbox{
+/* position: relative; */
+/* position: absolute;   */
+/* top: 17vh; */
+/* left: 8vw; */
+width: 100%;
+height: 70vh;
+/* background-color: #026700; */
 font-family: Gilroy;
 }
 #order {
 display: flex;
-align-items: center;
+align-items: start;
+padding-left: 2vw;
 width: 23vw;
 margin-top: 1px;
-background-color: white;
+/* background-color: white; */
 height: 6vh;
-margin-top: -34px;
+/* margin-top: -34px; */
 border-bottom: 2px solid #dadada;
 }
 .ri-arrow-up-circle-fill{
 font-size: 27px;
-margin-left: 20px;
+/* margin-left: 20px; */
 
 }
 .ri-skip-right-line{
 font-size: 20px;
-margin-left: 90px;
+/* margin-left: 90px; */
 }
 #order>h3{
 font-size: 18px;
-margin-left: 12px;
+/* margin-left: 12px; */
 font-family: "Gilroy";
 font-weight: 500;
 
@@ -91,7 +112,7 @@ font-weight: 500;
 #account{
   padding-left: 2vw;
 position: relative;
- position: absolute;
+ /* position: absolute; */
  width: 100%;
  height: 30%;
  font-family: "Gilroy";
@@ -142,9 +163,9 @@ font-weight: 500;
 
 #payment{
 padding-left: 2vw;
-position: relative;
-position: absolute;
-top: 33%;
+/* position: relative; */
+/* position: absolute; */
+/* top: 33%; */
 width: 100%;
 height: 30%;
 font-family: "Gilroy";
@@ -158,97 +179,92 @@ gap: 2vh;
 }
 #rap{
 display: flex;
-/* position: absolute; */
-/* left: 15%; */
-/* top: 5%; */
-
+gap: 3vw;
 }
 .ri-bank-card-fill{
-position: absolute;
+/* position: absolute; */
 font-size: 20px;
-top: 10%;
-margin-left: 210px;
+/* top: 10%; */
+/* margin-left: 210px; */
 }
 
 #rap>h3{
-/* position: absolute;
-top: 5%;
-left: 15%; */
 font-family: "Gilroy";
 font-weight: 400;
-
-
 }
+
 .m{
-/* margin-top: 15%; */
-/* margin-left: 15%; */
 font-family: "Gilroy";
 font-weight: 500;
 }
+
 .n{
-/* margin-top: 6%; */
-/* margin-left: 15%; */
 font-family: "Gilroy";
 font-weight: 500;
 }
+
 .o{
-/* margin-top: 6%; */
-/* margin-left: 15%; */
 font-family: "Gilroy";
 font-weight: 500;
 }
 
 #others{
-position: absolute;
-bottom: 5%;
+  padding-left: 2vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: start;
+  gap: 1.5vh;
+/* position: absolute; */
+/* bottom: 5%; */
 width: 100%;
 height: 30%;
 
     /* background-color: aqua; */
 }
 #others>h3{
-position: absolute;
-top: 5%;
-left: 15%;
+/* position: absolute; */
+/* top: 5%; */
+/* left: 15%; */
 font-family: "Gilroy";
 font-weight: 500;
 }
 .w{
-margin-top: 12%;
-margin-left: 15%;
+/* margin-top: 12%; */
+/* margin-left: 15%; */
 font-family: "Gilroy";
 font-weight: 500;
 }
 .x{
-margin-top: 4%;
-margin-left: 15%;
+/* margin-top: 4%; */
+/* margin-left: 15%; */
 font-family: "Gilroy";
 font-weight: 500;
 }
 .y{
-margin-top: 4%;
-margin-left: 15%;
+/* margin-top: 4%; */
+/* margin-left: 15%; */
 font-family: "Gilroy";
 font-weight: 500;
 }
 .z{
-margin-top: 4%;
-margin-left: 15%;
+/* margin-top: 4%; */
+/* margin-left: 15%; */
 font-family: "Gilroy";
 font-weight: 500;
 }
 
+/* --------------------------bottombox--------------------- */
 
-
-#bottombox{
+#left #bottombox{
 display: flex;
 align-items: center;
-position: absolute;
-bottom: 1vh;
-left: 8vw;
+/* position: absolute; */
+/* bottom: 1vh; */
+/* left: 8vw; */
 width: 23vw;
 height: 6vh;
-background-color: #fff;
+/* background-color: #ec0a0a; */
 }
 .ri-logout-circle-line{
 font-size: 27px;
@@ -263,14 +279,7 @@ font-family: "Gilroy";
 font-weight: 500;
 
 }
-#right{
-position: absolute;
-bottom: 7vh;
-right: 8vw;
-width: 60vw;
-height: 90vh;
-background-color: #fff;
-}
+
 
 
 
