--- a/codeBite/public/stylesheets/style.css
+++ b/codeBite/public/stylesheets/style.css
@@ -216,10 +216,10 @@ video {
   display: flex;
   flex-direction: column;
   align-items: center;
-  color: #050505;
+  color: #915454;
   width: 50%;
   height: 100%;
-  background-color: rgba(172, 86, 106, 0.663);
+  background-color: rgba(1, 1, 1, 0.663);
   color: whitesmoke;
 }
 
@@ -252,7 +252,7 @@ video {
   padding: 6px 10px;
   text-align: center;
   font-size: 1.3em;
-  background-color: pink;
+  background-color: rgb(190, 117, 117);
   color: #181818;
   width: 38%;
   text-decoration: none;
@@ -310,6 +310,73 @@ video {
   font-size: 1rem;
   font-weight: 400;
 }
+.aboutpage1{
+  display: flex;
+  height: 100vh;
+  width: 100vw;
+ 
+}
+.aboutpage1 .apleft{
+     width: 70vw;
+     height: 100%;
+     background-color: #ffffff;
+}
+.aboutpage1 .apright{
+  width: 30vw;
+  height: 100%;
+  background-color: #e2e4e9;
+}
+.apleft{
+
+    flex-direction: column;
+justify-content: center;
+align-items: center;
+
+    
+}
+    .apleft >.up{
+       height: 17vh;
+       width: 100%;
+       /* background-color: #deb7b7; */
+       background-size: cover;
+       object-fit: cover;
+       background-image: url("	https://image1.rugs-direct.com/rug_gallery/cms2/DesignFinderPRP_A.svg");
+    }
+  .apleft >.down{
+      height: 80vh;
+      width: 100%;
+      background-color: #e7e7e7;
+    }
+
+.apright{
+   display: grid;
+   align-items: center;
+   justify-content: center;
+
+}
+.rtop{
+  height: 18vh;
+  width: 25vw;
+  background-color: #deb7b7;
+}
+.rmid{
+  height: 38vh;
+  width: 25vw;
+  /* background-color: #ce7b7b; */
+  background-size: cover;
+  object-fit: cover;
+  background-image: url("https://image1.rugs-direct.com/rug_gallery/cms2/RugBuyGuide_Sanaa.jpg");
+}
+
+.rbottom{
+  height: 38vh;
+  width: 25vw;
+  background-image: url("https://image1.rugs-direct.com/rug_gallery/cms2/HowToCleanPersian_Georgie06.jpg");
+  /* background-color: #915454; */
+  object-fit: cover;
+  background-size: cover;
+}
+
 /* .nav-container {
   display: flex;
   align-items: center;
