--- a/codeBite/views/index.ejs
+++ b/codeBite/views/index.ejs
@@ -263,6 +263,21 @@
       </div> -->
   </div>
 
+  <div class="aboutpage1">
+    <div class="apleft">
+     <div class="up"></div>
+     <div class="down"></div>
+    </div>
+    <div class="apright">
+      <div class="rtop">
+        <h3>IDEAS AND ADVICE</h3>
+        <p>Check out our latest how to's + design tips to find the perfect rug for your space.</p>
+      </div>
+      <div class="rmid">  </div>
+      <div class="rbottom">   </div>
+    </div>
+  </div>
+
   <div class="footer-div">
     <div class="footer-overlay">
       <section>email</section>
