today last update in my side (i am prem)

--- a/codeBite/views/indexForLoggedInUser.ejs
+++ b/codeBite/views/indexForLoggedInUser.ejs
@@ -226,9 +226,27 @@
       <video autoplay loop muted src="./video/video.mp4"></video>
       </div> -->
   </div>
+
+  <div class="aboutpage1">
+    <div class="apleft">
+     <div class="up"></div>
+     <div class="down"></div>
+    </div>
+    <div class="apright">
+      <div class="rtop">
+        <h3>IDEAS AND ADVICE</h3>
+        <p>Check out our latest how to's + design tips to find the perfect rug for your space.</p>
+      </div>
+      <div class="rmid">  </div>
+      <div class="rbottom">   </div>
+    </div>
+    
+  </div>
+
   <form action="/logout" method="POST">
     <button>logout</button>
   </form>
+  
 
   <div class="footer-div">
     <div class="footer-overlay">
