--- a/codeBite/public/stylesheets/style.css
+++ b/codeBite/public/stylesheets/style.css
@@ -269,7 +269,7 @@ video {
   padding-top: 2vh;
   padding-bottom: 2vh;
   display: flex;
-  gap: 4vw;
+  gap: 1vw;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
@@ -283,19 +283,30 @@ video {
   align-items: center;
   padding: 2vh 1vw;
   position: relative;
-  margin-top: 3vh;
-  width: 20vw;
-  height: 60vh;
+  margin-top: 2vh;
+  width: 17vw;
+  height: 45vh;
   /* background-color: rgb(228, 221, 221); */
 }
 .box-c .img-box {
   text-align: center;
   width: 100%;
   height: 90%;
+  
+  /* background-color: #181818; */
 }
+.box-c img:hover {
+  width: 15vw;
+  height: 37vh;
+  cursor: pointer;
+  transition: ease-in-out 0.2s;
+  
+}
+
+
 .img-box img {
-  width: 100%;
-  height: 100%;
+  width: 97%;
+  height: 95%;
   object-fit: cover;
   background-size: cover;
 }
