--- a/codeBite/views/myAccount.ejs
+++ b/codeBite/views/myAccount.ejs
@@ -9,7 +9,9 @@
 
 </head>
 <body>
+  
      <div id="main">
+   <a href="/loggedIndex">   <button id="back">Back</button> </a>
         <div id="left">
             <div id="upbox">
                     <div id="imgbox"> <img src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" alt=""> </div>
