--- a/codeBite/views/indexForLoggedInUser.ejs
+++ b/codeBite/views/indexForLoggedInUser.ejs
@@ -53,7 +53,8 @@
           </div>
 
           <div class="myAccount">
-            <i class="ri-account-circle-line"></i>
+            <a href="/myAccount">
+            <i class="ri-account-circle-line"></i></a>
             <a href="/myAccount"> <%= user[0].Name %></a>
           </div>
         </div>
@@ -243,17 +244,29 @@
     
   </div>
 
-  <form action="/logout" method="POST">
+  <!-- <form action="/logout" method="POST">
     <button>logout</button>
   </form>
-  
+   -->
 
   <div class="footer-div">
     <div class="footer-overlay">
-      <section>email</section>
-      <section>About us</section>
-      <section>Social media handle</section>
-      <section>contact</section>
+      <section>  <h1 id="rugs-footer" style="font-size: 4rem; color: rgb(201,162,92);">INDIAN <br> RUGS</h1></section>
+      <!-- <section>About us </section> -->
+      <section>
+        <h2>About Us </h2>
+     <br>   <h5>About Us</h5>
+     <br>  <h5>Privacy policy</h5>
+     <br> <h5> Terms & Conditions</h5>
+     <br> <h5></h5>
+      </section>
+      <section> <h2>Contact us </h2>
+     <br>    <h5>Address: </h5>
+     <br>   <h5>Email - indianrugs@gmail.com</h5>
+     <br>   <h5> Phone no. - +916266761952,6269148063 , 9301785324</h5>
+        
+
+      </section>
     </div>
     <video autoplay loop muted src="./video/video.mp4"></video>
     </div> 
