--- a/codeBite/views/addnewpro.ejs
+++ b/codeBite/views/addnewpro.ejs
@@ -77,13 +77,21 @@ body {
 #close-button:hover {
   background-color: #ffa500;
 }
+ #main >img{
+  object-fit: cover;
+  background-size: cover;
+  width: 100%;
+  height: 100%;
 
+ }
 
 </style>
 <body>
 
   <div id="main">
-    <video autoplay loop muted src="./video/video.mp4"></video>
+    <!-- <video autoplay loop muted src="./video/video.mp4"></video> -->
+    <!-- <img src="https://d3o59fu9acgbkr.cloudfront.net/jrc2021/home/master/2023/7/5/jrc-desktop-banner-7-5-2023-12-37-09-PM.jpg" alt=""> -->
+    <img src="https://d3o59fu9acgbkr.cloudfront.net/jrc2021/collection/desktop/manchaha.jpg" alt="">
  
   <div id="card">
     <div id="left">
